--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -3,9 +3,9 @@
   align-items: center;
   justify-content: space-between;
   background-color: #292d2b;
-  height: 3.5rem;
   box-shadow: 0 10px 7px rgba($main-color, 0.5);
   &__header {
+    font-size: 3.7rem;
     margin-left: 0.5rem;
     color: $main-color;
     display: inline-block;
@@ -22,6 +22,7 @@
   list-style-type: none;
   text-decoration: none;
   &__link {
+
     list-style: none;
     display: inline-block;
     &:not(:first-child) {
@@ -30,7 +31,10 @@
     &:last-child {
       margin-right: 0.7rem;
     }
-  }
+  } 
+}
+a{
+  font-size: 1.7rem;
 }
 @media screen and (max-width: 100px) {
   .header {
