--- a/style.css
+++ b/style.css
@@ -24,6 +24,20 @@ a {
     background-color: #7899d4;
     color: white; }
 
+.header-text {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 2rem;
+  font-weight: 700;
+  background-image: linear-gradient(to right, #7899d4, black);
+  -webkit-background-clip: text;
+  color: transparent; }
+
+.paragraph {
+  font-weight: 500;
+  line-height: 2.3rem;
+  font-size: 1.5rem;
+  margin-bottom: 3rem; }
+
 .u-center-text {
   text-align: center; }
 
@@ -32,9 +46,9 @@ a {
   align-items: center;
   justify-content: space-between;
   background-color: #292d2b;
-  height: 3.5rem;
   box-shadow: 0 10px 7px rgba(120, 153, 212, 0.5); }
   .nav__header {
+    font-size: 3.7rem;
     margin-left: 0.5rem;
     color: #7899d4;
     display: inline-block;
@@ -55,6 +69,9 @@ a {
       margin-left: 1rem; }
     .navigation__link:last-child {
       margin-right: 0.7rem; }
+
+a {
+  font-size: 1.7rem; }
 
 @media screen and (max-width: 100px) {
   .header {
@@ -118,42 +135,6 @@ a {
     background-color: #7899d4;
     color: white; }
 
-.center-text {
-  margin-top: 1.5rem;
-  text-align: center; }
-
-#me {
-  font-size: 55px; }
-
-.row {
-  margin-left: 2rem;
-  margin-right: 3rem;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap; }
-  .row__three-grid {
-    margin-top: 1rem;
-    margin-right: 1rem;
-    box-shadow: 3px 5px 5px rgba(120, 153, 212, 0.5);
-    padding: 0.3rem;
-    border-radius: 0.5rem;
-    height: 50rem;
-    width: 35rem; }
-
-.header-text {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 2rem;
-  font-weight: 700;
-  background-image: linear-gradient(to right, #7899d4, black);
-  -webkit-background-clip: text;
-  color: transparent; }
-
-.paragraph {
-  font-weight: 500;
-  line-height: 2.3rem;
-  font-size: 1.5rem;
-  margin-bottom: 3rem; }
-
 .btn {
   font-size: 1.5rem;
   font-family: 'Noto Sans', sans-serif;
@@ -184,3 +165,25 @@ a {
 @media screen and (max-width: 500px) {
   .row__three-grid {
     flex: 100%; } }
+
+.center-text {
+  margin-top: 1.5rem;
+  text-align: center; }
+
+#me {
+  font-size: 55px; }
+
+.row {
+  margin-left: 2rem;
+  margin-right: 3rem;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap; }
+  .row__three-grid {
+    margin-top: 1rem;
+    margin-right: 1rem;
+    box-shadow: 3px 5px 5px rgba(120, 153, 212, 0.5);
+    padding: 0.3rem;
+    border-radius: 0.5rem;
+    height: 50rem;
+    width: 35rem; }
