--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,6 +10,7 @@
   height: 60rem;
   background-position: center;
   background-repeat: no-repeat;
+  margin-bottom: 3rem;
   &__textbox {
     position: absolute;
     top: 50%;
