--- a/style.css
+++ b/style.css
@@ -86,7 +86,8 @@ a {
   background-size: cover;
   height: 60rem;
   background-position: center;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  margin-bottom: 3rem; }
   .header__textbox {
     position: absolute;
     top: 50%;
@@ -179,11 +180,16 @@ a {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap; }
+  .row__inner-div {
+    padding-left: 100px; }
+  .row__inner-div2 {
+    display: inline-block;
+    padding: 30px; }
   .row__three-grid {
     margin-top: 1rem;
     margin-right: 1rem;
     box-shadow: 3px 5px 5px rgba(120, 153, 212, 0.5);
-    padding: 0.3rem;
+    padding: 25px;
     border-radius: 0.5rem;
-    height: 50rem;
+    height: auto;
     width: 35rem; }
