--- a/style.css
+++ b/style.css
@@ -184,7 +184,8 @@ a {
     padding-left: 100px; }
   .row__inner-div2 {
     display: inline-block;
-    padding: 30px; }
+    padding: 30px;
+    max-width: 500px; }
   .row__three-grid {
     margin-top: 1rem;
     margin-right: 1rem;
@@ -192,4 +193,4 @@ a {
     padding: 25px;
     border-radius: 0.5rem;
     height: auto;
-    width: 35rem; }
+    width: 350px; }
