--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,6 +40,7 @@
   &__inner-div2{
     display: inline-block;
     padding:30px;
+    max-width: 500px;
 
   }
   &__three-grid {
@@ -52,6 +53,6 @@
     // background-color: $main-color;
 
     height: auto;
-    width: 35rem;
+    width: 350px;
   }
 }
