--- a/style.css
+++ b/style.css
@@ -181,10 +181,9 @@ a {
   justify-content: space-between;
   flex-wrap: wrap; }
   .row__inner-div {
-    text-align: center; }
-  .row__inner-div2 {
-    margin: 0 auto;
     text-align: center;
+    margin: 0 auto; }
+  .row__inner-div2 {
     display: inline-block;
     padding: 30px;
     width: auto; }
