--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,68 +1,31 @@
 .btn {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
+  font-family: 'Noto Sans', sans-serif;
+  padding: 0.5em;
+  border: 1px solid $main-color;
+  -webkit-border: 1px solid $main-color;
+  text-transform: uppercase;
+  -webkit-text-transform: uppercase;
+  text-decoration: none;
+  -webkit-text-decoration: none;
+  color: $main-color;
+  &:link {
     font-family: 'Noto Sans', sans-serif;
-    margin-top: 3rem;
-    padding: 0.5rem;
+    padding: 0.5em;
     border: 1px solid $main-color;
-    -webkit-border: 1px solid $main-color;
     text-transform: uppercase;
-    -webkit-text-transform: uppercase;
     text-decoration: none;
-    -webkit-text-decoration: none;
     color: $main-color;
-    &:link {
-      font-family: 'Noto Sans', sans-serif;
-      margin-top: 3rem;
-      padding: 0.5rem;
-      border: 1px solid $main-color;
-      text-transform: uppercase;
-      text-decoration: none;
-      color: $main-color;
-    }
-    &:hover {
-      background-color: $main-color;
-      color: white;
-    }
-    &:active {
-      background-color: $main-color;
-      color: white;
-    }
   }
-  .btn {
-    font-size: 1.5rem;
-    font-family: 'Noto Sans', sans-serif;
-    margin-top: 3rem;
-    padding: 0.5rem;
-    border: 1px solid $main-color;
-    -webkit-border: 1px solid $main-color;
-    text-transform: uppercase;
-    -webkit-text-transform: uppercase;
-    text-decoration: none;
-    -webkit-text-decoration: none;
-    color: $main-color;
-    &:link {
-      font-family: 'Noto Sans', sans-serif;
-      margin-top: 3rem;
-      padding: 0.5rem;
-      border: 1px solid $main-color;
-      text-transform: uppercase;
-      text-decoration: none;
-      color: $main-color;
-    }
-    &:hover {
-      background-color: $main-color;
-      color: white;
-    }
-    &:active {
-      background-color: $main-color;
-      color: white;
-      // transition: all;
-      // animation-name: scale;
-      // animation-duration: 3s;
-    }
+  &:hover {
+    background-color: $main-color;
+    color: white;
   }
-  @media screen and(max-width:500px) {
-    .row__three-grid {
-      flex: 100%;
-    }
+  &:active {
+    background-color: $main-color;
+    color: white;
+    // transition: all;
+    // animation-name: scale;
+    // animation-duration: 3s;
   }
+}
