--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -19,7 +19,6 @@
   }
 }
 .textbox__header {
-  margin: -0.5rem;
   font-family: 'Noto Sans', sans-serif;
   font-size: 6.5rem;
   font-weight: 700;
@@ -31,17 +30,6 @@
     font-weight: 300;
     font-size: 2rem;
     color: $main-color;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1em;
   }
 }
-// @media screen and (max-height: 900px) {
-//   .header {
-//     height: 50rem;
-//   }
-//   .textbox__header {
-//     font-size: 5rem;
-//   }
-//   .textbox__header-secondary {
-//     font-size: 1.5rem;
-//   }
-// }
