--- a/sass/components/_grid.scss
+++ b/sass/components/_grid.scss
@@ -13,7 +13,7 @@
 .grid-wh{
   width:30%;
 }
-@media (max-width:850px){
+@media screen and (max-width:850px){
   .row{
     flex-direction: column;
   }
