--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ a {
 .grid-wh {
   width: 30%; }
 
-@media (max-width: 850px) {
+@media screen and (max-width: 850px) {
   .row {
     flex-direction: column; }
   .grid-wh {
