--- a/sass/components/_grid.scss
+++ b/sass/components/_grid.scss
@@ -15,7 +15,7 @@
 }
 @media screen and (max-width:850px){
   .row{
-    flex-direction: column;
+    -webkit-flex-direction: column;
   }
   .grid-wh{
     width:100%;
