--- a/sass/components/_grid.scss
+++ b/sass/components/_grid.scss
@@ -16,6 +16,7 @@
 @media screen and (max-width:850px){
   .row{
     -webkit-flex-direction: column;
+    flex-direction: column;
   }
   .grid-wh{
     width:100%;
