--- a/style.css
+++ b/style.css
@@ -155,7 +155,8 @@ a {
 
 @media screen and (max-width: 850px) {
   .row {
-    -webkit-flex-direction: column; }
+    -webkit-flex-direction: column;
+    flex-direction: column; }
   .grid-wh {
     width: 100%;
     margin-bottom: 3em; } }
