--- a/sass/components/_grid.scss
+++ b/sass/components/_grid.scss
@@ -13,7 +13,7 @@
 .grid-wh{
   width:30%;
 }
-@media screen and (max-width:850px){
+@media all and (max-width:850px){
   .row{
     -webkit-flex-direction: column;
     flex-direction: column;
