--- a/sass/components/_grid.scss
+++ b/sass/components/_grid.scss
@@ -13,7 +13,7 @@
 .grid-wh{
   width:30%;
 }
-@media all and (min-width:900px){
+@media all and (max-width:950px){
   .row{
     -webkit-flex-direction: column;
     flex-direction: column;
