--- a/style.css
+++ b/style.css
@@ -74,12 +74,18 @@ a {
 a {
   font-size: 1.7rem; }
 
-@media screen and (max-width: 100px) {
+@media screen and (max-width: 600px) {
+  .nav {
+    flex-direction: column;
+    align-items: center; }
   .header {
+    margin-left: 0;
     font-size: 2rem; }
   a {
     font-size: 2rem;
-    padding: 0.4rem; } }
+    padding: 0.4rem; }
+  .navigation {
+    margin-left: 3em; } }
 
 .header {
   position: relative;
