--- a/style.css
+++ b/style.css
@@ -114,6 +114,10 @@ a {
     color: #7899d4;
     margin-bottom: 1em; }
 
+@media screen and (max-width: 400px) {
+  .html {
+    font-size: 55%; } }
+
 #me {
   font-size: 5.5rem;
   background-image: linear-gradient(to right, #7899d4, black);
