--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -33,8 +33,12 @@
     margin-bottom: 1em;
   }
 }
-@media screen and(max-width: 400px) {
-  .html {
-    font-size: 55%;
+@media screen and(max-width: 500px) {
+  .textbox__header{
+    font-size: 3.5rem;
+    &-secondary{
+      font-size: 1rem;
+    }
   }
+  
 }
