--- a/sass/style.scss
+++ b/sass/style.scss
@@ -71,11 +71,11 @@
     opacity: 1;
   }
 }
-@media (max-width: 900px) {
-  .nav {
-    display: none;
-  }
-  .nav-2 {
-    display: flex;
-  }
-}
+// @media (max-width: 900px) {
+//   .nav {
+//     display: none;
+//   }
+//   .nav-2 {
+//     display: flex;
+//   }
+// }
