--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ html {
   margin: 0;
   padding: 0; }
 
+body {
+  width: 100%; }
+
 ul li {
   display: inline-block;
   list-style: none;
@@ -205,7 +208,75 @@ a {
 
 #icon-2 {
   font-size: 35px;
-  cursor: pointer; }
+  cursor: pointer;
+  background-image: linear-gradient(to right, #7899d4, black);
+  -webkit-background-clip: text;
+  color: transparent; }
+
+.container {
+  width: 100%; }
+
+.EmailForm, .ContactUs {
+  width: 45%;
+  background-image: linear-gradient(to bottom right, #7899d4, rgba(0, 0, 0, 0.658));
+  border: .5em solid #4171C3;
+  border-radius: 5px;
+  box-shadow: 3px 5px 5px rgba(120, 153, 212, 0.5);
+  margin-bottom: 5em;
+  margin: 0 auto;
+  padding: 2.5em; }
+
+.EmailForm__header {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 4rem;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em; }
+
+.EmailForm__paragraph {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 2rem;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em; }
+
+#email-label {
+  font-size: 2.5rem; }
+
+.textbox {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #4171C3;
+  padding: 0.4em;
+  outline: none;
+  width: 30%; }
+  .textbox:active {
+    padding: 0.4em;
+    outline: none; }
+  .textbox:focus {
+    border-bottom: 2px solid #4171C3; }
+  .textbox::placeholder {
+    /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: #7899d4;
+    opacity: 1;
+    /* Firefox */ }
+
+.first-last {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 2em; }
+
+.email {
+  display: flex;
+  justify-content: center; }
+
+.EmailForm-ContactUs {
+  display: flex;
+  width: 90%;
+  margin: 0 auto; }
+
+.ContactUs {
+  width: 45%; }
 
 @keyframes fade-in {
   0% {
