--- a/sass/style.scss
+++ b/sass/style.scss
@@ -61,8 +61,77 @@
 #icon-2 {
   font-size: 35px;
   cursor: pointer;
+  background-image: linear-gradient(to right, $main-color, black);
+  -webkit-background-clip: text;
+  color: transparent;
 }
+.container{
+  width: 100%;
+}
+.EmailForm,.ContactUs {
+  width:45%;
+  background-image: linear-gradient(to bottom right, $main-color, rgba(0, 0, 0, 0.658));
+  border: .5em solid #4171C3;
+  border-radius: 5px;
+  box-shadow: 3px 5px 5px rgba($main-color, 0.5);
+  margin-bottom: 5em;
+  margin: 0 auto;
+  padding: 2.5em;
+}
+.EmailForm__header {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 4rem;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+.EmailForm__paragraph {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 2rem;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+#email-label {
+  font-size: 2.5rem;
+}
+.textbox {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #4171C3;
+  padding: 0.4em;
+  outline: none;
+  width:30%;
+  &:active {
+    padding: 0.4em;
+    outline: none;
+  }
+  &:focus {
+    border-bottom: 2px solid #4171C3;
+  }
+  &::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: $main-color;
+    opacity: 1; /* Firefox */
+  }
+}
+.first-last{
+  display:flex;
+  justify-content: space-evenly;
+  margin-bottom: 2em;
+}
+.email{
+  display:flex;
+  justify-content: center;
+}
+.EmailForm-ContactUs{
+  display:flex;
+  width: 90%;
+  margin: 0 auto;
 
+}
+.ContactUs{
+  width:45%;
+}
 @keyframes fade-in {
   0% {
     opacity: 0;
@@ -78,4 +147,5 @@
   .nav-2 {
     display: flex;
   }
+  
 }
